Bug 47700 - [sna, gm45] crash in sna_composite
Summary: [sna, gm45] crash in sna_composite
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-22 00:49 UTC by Magnus Kessler
Modified: 2012-03-22 02:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Magnus Kessler 2012-03-22 00:49:23 UTC
When running under KDE, with the kde44-oxygen-molecule theme configured for GTK applications, starting pavucontrol reproducibly crashes the X server.

Program received signal SIGSEGV, Segmentation fault.
sna_composite (op=1 '\001', src=0x68db5b0, mask=0x0, dst=0x68db8c0, src_x=0, 
    src_y=0, mask_x=0, mask_y=0, dst_x=0, dst_y=0, width=256, height=256)
    at ../xf86-video-intel-9999/src/sna/sna_composite.c:484
484     ../xf86-video-intel-9999/src/sna/sna_composite.c: No such file or directory.
        in ../xf86-video-intel-9999/src/sna/sna_composite.c
(gdb) bt
#0  sna_composite (op=1 '\001', src=0x68db5b0, mask=0x0, dst=0x68db8c0, 
    src_x=0, src_y=0, mask_x=0, mask_y=0, dst_x=0, dst_y=0, width=256, 
    height=256) at ../xf86-video-intel-9999/src/sna/sna_composite.c:484
#1  0x00000000005029a4 in damageComposite (op=1 '\001', pSrc=0x68db5b0, 
    pMask=0x0, pDst=0x68db8c0, xSrc=0, ySrc=0, xMask=0, yMask=0, xDst=0, 
    yDst=0, width=256, height=256)
    at /usr/src/debug/x11-base/xorg-server-1.12.0-r1/xorg-server-1.12.0/miext/damage/damage.c:569
#2  0x00000000004fb1ec in ProcRenderComposite (client=0x32e3670)
    at /usr/src/debug/x11-base/xorg-server-1.12.0-r1/xorg-server-1.12.0/render/render.c:722
#3  0x0000000000437a91 in Dispatch ()
    at /usr/src/debug/x11-base/xorg-server-1.12.0-r1/xorg-server-1.12.0/dix/dispatch.c:439
#4  0x00000000004264ca in main (argc=<optimized out>, argv=0x7fff799cfbb8, 
    envp=<optimized out>)
    at /usr/src/debug/x11-base/xorg-server-1.12.0-r1/xorg-server-1.12.0/dix/main.c:287
Comment 1 Chris Wilson 2012-03-22 02:36:47 UTC
commit a6b48dd7f1eeb1a8e3841b8f3326c60b300ee9e9
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Mar 22 09:22:52 2012 +0000

    sna: Force fallbacks if the destination is unattached
    
    Since the removal of the ability to create a backing pixmap after the
    creation of its parent, it no longer becomes practical to attempt
    rendering with the GPU to unattached pixmaps. So having made the
    decision never to render to that pixmap, perform the test explicitly
    along the render paths.
    
    This fixes a segmentation fault introduced in 8a303f195 (sna: Remove
    existing damage before overwriting with a composite op) which assumed
    the existence of a backing pixmap along a render path.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=47700
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.